Massive FrameworkAdaptor implementation rework.